背景色を水色にした。

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -65,4 +65,7 @@
         position:absolute; top:450px; left:190px; width:80px; height:40px;   
     }
     
+    body{
+        background-color: skyblue;
+    }
     input[type=number] {text-align: right;}
