bottonの文字を青色にした。

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -68,4 +68,8 @@
     body{
         background-color: skyblue;
     }
+
+    botton{
+        color:blue;
+    }
     input[type=number] {text-align: right;}
