bottonのboder-radiusを２０にした。

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -72,5 +72,6 @@
     botton{
         color:blue;
         font-family: Times;
+        border-radius: 20px;
     }
     input[type=number] {text-align: right;}
