--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,7 @@
         text-align: center;
         position:absolute; top:310px; 
         left:10px; right:10px;
+        font-weight: bold;
     }
     
     #time {
@@ -71,7 +72,7 @@
         background-color: skyblue;
     }
 
-    botton{
+    button{
         color:blue;
         font-family: Times;
         border-radius: 20px;
