--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,7 +35,11 @@
         width: 50%;
         margin: 0 auto;
     }
-    
+
+    #time::after{
+       content: " 秒";
+    }
+
     #mycanvas {
         color: #ffffff;
         font-size: 40px;
