--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,14 @@
         left:10px; right:10px;
         overflow-wrap: break-word;
     }
+    #text{
+        color:brown;
+        font-size: 20px;
+        text-align: center;
+        position: absolute; top: 290px;
+        left: 10px; right: 10px;
+        font-weight: bold;
+    }
 
     #remain {
         color: #ff0000;
@@ -64,7 +72,19 @@
         font-size: 20px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
     }
-    
+
+    #btnD{
+        font-size:20px;
+        position: absolute; top: 500px;
+        left :0%; width:40%; height:70px;
+    }
+
+    #btnE{
+        font-size: 20px;
+        position: absolute; top: 500px;
+        left: 40%; width:40%; height:70px;
+    }
+
     #minute {
         font-size: 30px;
         position:absolute; top:450px; left:60px; width:80px; height:40px;   
